retira ul com links de navegação do menu nav

--- a/index.html
+++ b/index.html
@@ -9,17 +9,11 @@
 </head>
 <body>
   
-  <header>
+  <header> 
     <nav>
       <div>
-          <img src="#" alt="">
-          <ul>
-              <li><a href=""></a>Quem Somos</li>
-              <li><a href=""></a>Portfólio</li>
-              <li><a href=""></a>Cultura</li>
-              <li><a href=""></a>Contato</li>
-              <li><a href=""></a>Vagas</li>
-          </ul>
+          <img src="#" alt="logotipo">
+          
       </div>          
     </nav>
 
