inseri pt-br e img do cabeçalho

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <nav>
       <div>
-          <img src="#" alt="">
+          <img src="/resources/css/nav/logo.png" alt="">
           <ul>
               <li><a href=""></a>Quem Somos</li>
               <li><a href=""></a>Portfólio</li>
