eu coloquei um monte de coisas, tu vai conseguir ver kkkkk

--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
         <input type="checkbox" id="check1">
         <label for="check1">Design Digital</label>
         <ul>
-          <li><a href="#">Projetos</a></li>
-          <li><a href="#">Veja mais</a></li>
+          <li><a href="#">CX / UX / UI design</a></li>
+          <li><a href="#">Estratégia digital</a></li>
+          <li><a href="#">Research</a></li>
+          <li><a href="#">Jornada do usuário</a></li>
+          <li><a href="#">Pesquisas com usuários</a></li>
         </ul>
       </div>
 
@@ -71,16 +74,22 @@
         <input type="checkbox" id="check2">
         <label for="check2">Softwares e Operações de TI</label>
         <ul>
-          <li><a href="#">Projetos</a></li>
-          <li><a href="#">Veja mais</a></li>
+          <li><a href="#">Estratégia de tecnologia e arquitetura de software</a></li>
+          <br>
+          <li><a href="#">Desenvolvimento de software customizado</a></li>  
+          <br>
+          <li><a href="#">Operações de TI</a></li>
         </ul>
       </div>
       <div class="item">
         <input type="checkbox" id="check3">
         <label for="check3">Tecnologia e Inovação</label>
         <ul>
-          <li><a href="#">Projetos</a></li>
-          <li><a href="#">Veja mais</a></li>
+          <li><a href="#">Aceleração de produtos digitais</a></li>
+          <li><a href="#">Novos modelos de negócio</a></li>
+          <li><a href="#">Validação de mercado</a></li>
+          <li><a href="#">Pilotos</a></li>
+          <li><a href="#">Culturalização para inovação</a></li>
         </ul>
       </div>       
 
@@ -299,6 +308,7 @@
     </div>-->
     <p class="direitos-autorias">&copy; Todos os direitos reservados 4U!</p>
     <br>
+    <img class="rodape" alt="fotografia da empresa" src="resources/css/footer/img/footer.png">
   </footer>
 
 
