--- a/vagas.html
+++ b/vagas.html
@@ -12,12 +12,30 @@
   <link rel="stylesheet" href="resources/css/accordion/accordion.css">
   <link rel="stylesheet" href="resources/css/galeria/galeria.css">
   <link rel="stylesheet" href="resources/css/galeria/img">
+  <link rel="stylesheet" href="resources/css/footer/footer.css">
 
   <!-- Bootstrap CSS -->
   <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
   <title>4U!</title>
 </head>
+
+<header>
+  <nav>
+    <a class="logo" href="#">4U!</a>
+    <div class="mobile-menu">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
+    <ul class="nav-list" style="z-index: 4;">
+      <li><a href="#">Serviços</a></li>
+      <li><a href="#">Cultura</a></li>
+      <li><a href="#">Vagas</a></li>
+      <li><a href="#">Contato</a></li>
+    </ul>
+  </nav>
+</header>
 
 <body>
 
@@ -27,8 +45,8 @@
     <footer>
         <div>
           <br>
-          <address>Rua Cel. Genuíno, 358 - Centro Histórico</address>
-          <address>Porto Alegre - RS, 90010-350</address>
+          <p>Rua Cel. Genuíno, 358 - Centro Histórico</p>
+          <p>Porto Alegre - RS, 90010-350</p>
         </div>
         <!--
         <div class="redes-sociais">
