alterações de html nas 3 páginas

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
       </div>
       <ul class="nav-list" style="z-index: 4;">
         <li><a href="index.html#servicos1">Serviços</a></li>
-        <li><a href="index.html#jobs1">Jobs</a></li>
-        <li><a href="index.html#contato1">Contato</a></li>
         <li><a href="index.html#cultura1">Cultura</a></li>
-        <li><a href="index.html#vagas1">Vagas</a></li>
+        <li><a href="index.html#depoimentos">Depoimentos</a></li>
+        <li><a href="index.html#contato1">Contato</a></li>
+        <li><a href="vagas.html" target="blank">Jobs</a></li>
+        <li><a href="vagas.html#vagas1" target="blank">Vagas</a></li>
       </ul>
     </nav>
 
@@ -105,21 +106,6 @@
     </section> 
 
     <!-------------------------------->
-    <!-----------jobs----------------->
-    <!-------------------------------->
-    <section class="jobs-container" id="jobs1">
-      <div class="jobs">
-        <img class="linhadecorativa" src="resources/css/img/linha1.png" alt="linha decorativa verde">
-        <h2 class="jobs-section">Jobs</h2>
-      </div>
-
-      <article class="jobs-article">
-        <p class="jobs-text">Aqui a gente não trabalha, nós nos divertimos! Por isso conquistamos um quadro de clientes tão ativo,
-          que só escolhe o que tem de melhor no mercado. Não se convenceu? Então confere aí!</p>
-      </article>
-      </section>
-
-    <!-------------------------------->
     <!-----------cultura-------------->
     <!-------------------------------->
     <section id="cultura1">
@@ -165,7 +151,7 @@
     <!-------------------------------->
     <!-----------depoimentos---------->
     <!-------------------------------->
-     <section>
+     <section id="depoimentos">
       <div class="depoimentos">
         <img class="linhadecorativa" src="resources/css/img/linha2.png" alt="linha decorativa roxa">
         <h2 class="contato-section">O que estão falando sobre nós</h2>
@@ -231,80 +217,6 @@
         </div>
       </div>      
       </section>
-
-    <!-------------------------------->
-    <!-----------vagas---------------->
-    <!-------------------------------->
-    <section id="vagas1">
-      <div class="vagas">
-        <img class="linhadecorativa" src="resources/css/img/linha2.png" alt="linha decorativa ROXA">
-        <h2 class="vagas-section">Vagas</h2>
-      </div>
-
-      <select class="tipo-vaga">
-        <option class="vaga-option" value="vaga"> Tipo de vaga</option> 
-        <option class="vaga-option" value="estagio"> Estágio</option> 
-        <option value="temporario"> Temporário</option> 
-        <option value="clt"> CLT</option> 
-        <option value="pj"> PJ</option> 
-        <option value="presencial"> Presencial</option> 
-        <option value="remoto"> Remoto</option> 
-      </select>
-
-      <select class="tipo-area">
-        <option value="rh"> Recursos Humanos</option> 
-        <option value="financeiro"> Financeiro</option> 
-        <option value="desenvolvimento"> Desenvolvimento</option> 
-        <option value="recepção"> Recepção</option> 
-        <option value="compras"> Compras</option>         
-      </select>
-         
-      <div class="planilha-vagas">
-        <table>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td class="coluna-oportunidades"><a href="vagas.html">Analista de RH</a></td>
-            <td class="coluna-numero-vagas">1</td>
-            <td class="coluna-tipo-vaga">Efetivo</td>
-          </tr>
-          <tr>
-            <td class="coluna-oportunidades">Psicóloga</td>
-            <td class="coluna-numero-vagas">3</td>
-            <td class="coluna-tipo-vaga">Efetivo</td>
-          </tr>
-          <tr>
-            <td class="coluna-oportunidades">Facilidatora TI</td>
-            <td class="coluna-numero-vagas">5</td>
-            <td class="coluna-tipo-vaga">Efetivo</td>
-          </tr>
-          <tr>
-            <td class="coluna-oportunidades">Designer</td>
-            <td class="coluna-numero-vagas">3</td>
-            <td class="coluna-tipo-vaga">Efetivo</td>
-          </tr>
-          <tr>
-            <td class="coluna-oportunidades">UX Designer</td>
-            <td class="coluna-numero-vagas">4</td>
-            <td class="coluna-tipo-vaga">Estágio</td>
-          </tr>
-          <tr>
-            <td class="coluna-oportunidades">UI Designer</td>
-            <td class="coluna-numero-vagas">4</td>
-            <td class="coluna-tipo-vaga">Estágio</td>
-          </tr>
-          <tr>
-            <td class="coluna-oportunidades">Desenvolvedor</td>
-            <td class="coluna-numero-vagas">5</td>
-            <td class="coluna-tipo-vaga">Estágio</td>
-          </tr>
-          
-        </table>
-      </div>
-    </section>
 
     <!-------------------------------->
     <!-----------contato-------------->
